--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </head>
 
     <body>
-        <div class="container">
+        <main class="container">
             <img src="images/image-qr-code.png" alt="QR Code">
-            <p id="first">Improve your front-end skills by building projects</p>
-            <p id="second">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+            <h1 class="first">Improve your front-end skills by building projects</h1>
+            <p class="second">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
             </p>
-        </div>
+        </main>
     </body>
 
 </html>
